eingebunden. Somit kann der Style bereits schon während dem editieren geladen und angeschaut werden.
Wird diese Option deaktivert, wird der normale WYSIWYG Editor Style geladen.
- Aus sicherheits- und benutzerfreundlichen Gründen wird nun standardmässig jeder Text der in den
WYSIWYG Editor kopiert wird, als Plaintext eingefügt. (FCKConfig.ForcePasteAsPlainText = true;)


****************************************
* Behobene Fehler **********************
****************************************
Allgemein
- Die im Benutzerprofil definierte bevorzugte Frontend-Sprache wird nach der
  Authentifizierung im Frontend nur dann geladen, sofern der Benutzer im
  Vorfeld nicht bereits die Frontend Sprache manuell ausgewählt hat.
- Geschwindigkeitsoptimierung der Benutzerverwaltung.
- Die Verwendung des Apache Moduls mod_rewrite wird nur aktiviert, sofern die
  Option 'Virtuelle Sprachverzeichnisse verwenden' aktiviert wurde.

Benutzerverwaltung
- Geburtstage zwischen dem 10. Februar 1653 und dem 16. November 5138 können
  erfasst werden.

Modul: Kleinanzeigemarkt
- Die Suche nach Anzeigen im Backend funktioniert.

Modul: Shop
- E-Mail Vorlagen vom Typ Systemvorlage sind nicht Löschbar.
- Bei der Bestellung eines Produktes vom Typ "Mitgliedschaft" wird das
  Benutzerkonto mit der entsprechend definierten Gültigkeitsdauer erstellt.
- Beim Versand der Bestellbestätigung per E-Mail wird, falls die benötigte
  E-Mail Vorlage in der ausgewählten Sprache nicht vorhanden ist, die, in der
  Standardsprache erfassten E-Mail Vorlage verwendet. Falls auch letztere nicht
  vorhanden ist, wird die nächste vorhandene Sprache verwendet.

Modul: User to User Nachrichten
- Die E-Mail Benachrichtigungen über neue Nachrichten werden versendet.

Statistik
- Die Zählung der Besucher erfolgt korrekt.

Webinstaller
- Kontrollkästchen werden beim Browser Opera angezeigt.

****************************************
* Neue Module **************************
****************************************

