@@ -85,7 +85,7 @@ class NewsletterLib
         if ($objDatabase->Execute("INSERT INTO ".DBPREFIX."module_newsletter_user (
         `code`,
         `email`,
-
+        `uri`,
         `sex`,
         `title`,
         `lastname`,
@@ -102,7 +102,7 @@ class NewsletterLib
         ) VALUES (
         '".$this->_emailCode()."',
         '".contrexx_addslashes($email)."',
-
+        '".contrexx_addslashes($uri)."',
         '".contrexx_addslashes($sex)."',
         ".intval($title).",
         '".contrexx_addslashes($lastname)."',
